# tacitus.news

./: .aiexclude  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  GEMINI.md  README.md  alembic.ini  contributing.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  kill_tmux.sh  launch.json  monitor_tmux.sh  monitor_workers.sh  pyproject.toml
database/: alembic.ini  pyproject.toml
database/alembic/versions/: 20260123_add_rate_limit_tables.py  3c696b9a41b7_init.py  9daae42bb19a_fix_typo.py
services/backend/: Dockerfile  pyproject.toml  requirements.txt
services/backend/app/: const.py  exc.py  main.py
services/backend/app/common/: mixins.py  (+1 more)
services/editorial/: .Dockerignore  Dockerfile  README.md  audit_events.py  backfill_interests.py  base_worker.py  cli.py  config.py  dev-runner.sh  event_aggregator.py  feeds_seeder.py  gn_test.py  google_bot.py  llm_parser.py  main.py  models.py  news_cluster.py  news_enhancer.py  news_filter.py  news_getter.py  news_merger.py  news_publisher.py  news_reviewer.py  pyproject.toml  requirements.txt
services/editorial/app/: config.py  dashboard.py  mcp_server.py
services/editorial/cli/: cli.py  cli_common.py  engine_room.py  live_desk.py  menu.py  review_station.py
services/editorial/core/: base_worker.py  browser.py  llm_parser.py  models.py  nlp_service.py
services/editorial/data/: feeds.json  regex_misses.json
services/editorial/domain/: aggregator.py  analyzing.py  clustering.py  enhancer.py  enhancing.py  enriching.py  filtering.py  harvesting.py  merger.py  merging.py  publisher.py  review.py
services/editorial/harvesters/: band.py  base.py  cartacapital.py  cnn.py  estadao.py  factory.py  g1.py  jovempan.py  metropoles.py  poder360.py  uol.py
services/editorial/scripts/: analyze_metrics.py  audit.py  backfill_bias.py  backfill_main_topics.py  backfill_stance.py  check_blocks.py  clean_old_events_queue.py  download.py  dump_data.py  google_bot.py  kill_locks.py  manage_feed_patterns.py  pattern_discovery_tool.py  recalc_aggregations.py  refetch_dates_and_score.py  requeue_untitled.py  restore_data.py  seeds.py  stats_report.py  test_date_extraction.py  test_enrichment.py  validate_data_flow.py  verify_gardner.py
services/editorial/tests/: test_harvester.py  test_llm_live.py  test_llm_parser.py  test_main.py
services/editorial/utils/: article_manager.py  backfill_interests.py  event_manager.py
services/editorial/workers/: analyzer.py  cluster.py  cron_gardner.py  cron_splitter.py  enhancer.py  enricher.py  filter.py  harvester.py  merger.py  publisher.py  reviewer.py
(+161 files in other folders)
