[project]
name = "tacitus-monorepo"
version = "0.1.0"
description = "Monorepo for Tacitus News"
requires-python = ">=3.12"
dependencies = [
    "backend",
    "editorial",
]

[tool.uv.workspace]
members = ["common", "database"]



[tool.uv.sources]

news_events_lib = { workspace = true }
backend = { path = "services/backend" }
editorial = { path = "services/editorial" }

[dependency-groups]
dev = [
    "rich>=14.2.0",
    "fastmcp>=0.1.0",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "streamlit>=1.53.1",
    "detect-secrets>=1.5.0",
]


# pyproject.toml

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
