[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.125.0",
    "fastapi-filter>=2.0.1",
    "fastapi-pagination>=0.15.3",
    "loguru>=0.7.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "websockets>=15.0.1",
    "news_events_lib"
]

[tool.uv.sources]
news_events_lib = { workspace = true }
