[project]
name =  "editorial"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "fast-json-repair>=0.2.0",
    "litellm>=1.81.1",
    "loguru>=0.7.3",
    "pgvector>=0.4.2",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
    "websockets>=16.0",
    "news_events_lib",
    "torch",
    "einops>=0.8.1",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "rich>=13.7.1",
]

[tool.uv.sources]
news_events_lib = { workspace = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
